Remove MongoDB and add PostgreSQL filter

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
     <groupId>com.itfsw</groupId>
     <artifactId>QueryBuilder</artifactId>
     <version>1.0.5-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
-    <description>Mybatis Generator Plugins</description>
+	<description>Java Backend for jQuery QueryBuilder</description>
     <url>https://github.com/itfsw/QueryBuilder</url>
 
     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ license ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
@@ -29,16 +29,18 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>[2.9.5,)</version>
+            <version>2.8.10</version>
         </dependency>
 
-        <!-- MongoDB -->
+		<!-- MongoDB -->
+		<!--
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
             <version>3.5.0</version>
             <scope>provided</scope>
-        </dependency>
+		</dependency>
+		-->
 
         <!-- junit -->
         <dependency>
@@ -140,7 +142,38 @@
                     <releaseProfiles>release</releaseProfiles>
                     <goals>deploy</goals>
                 </configuration>
-            </plugin>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>3.0.1</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-Name>Java Backend for jQuery QueryBuilder</Bundle-Name>
+						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Version>${project.version}</Bundle-Version>
+						<Bundle-Description>${project.version}</Bundle-Description>
+						<!--
+						<Export-Package>
+							com.itfsw.query.builder.*;version=${project.version}
+							com.itfsw.query.builder.config.*;version=${project.version}
+							com.itfsw.query.builder.exception.*;version=${project.version}
+							com.itfsw.query.builder.support.builder.*;version=${project.version}
+							com.itfsw.query.builder.support.filter.*;version=${project.version}
+							com.itfsw.query.builder.support.model.*;version=${project.version}
+							com.itfsw.query.builder.support.parser.*;version=${project.version}
+							com.itfsw.query.builder.support.utils.*;version=${project.version}
+						</Export-Package>
+						-->
+						<Import-Package>
+							*
+						</Import-Package>
+
+					</instructions>
+					<unpackBundle>true</unpackBundle>
+				</configuration>
+			</plugin>
         </plugins>
         <!-- 配置java版本 不配置的话默认父类配置的是1.6-->
         <pluginManagement>
