--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.bak
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -10,5 +11,10 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+.DS_Store
+.classpath
 .idea/
+.project
+.settings/
+.vscode/
 QueryBuilder.iml
